--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start:prod": "node server.js",
     "start:dev": "nodemon server.js"
   },
   "repository": {
