--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "uuid": "^8.3.2"
   }
 }
